--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -160,9 +160,9 @@ full-stack:
         REDIS_PORT: 6379
         BUCKET_URL: http://${taito_project}-${taito_env}-storage:9000/
         BUCKET_REGION: ${taito_provider_region}
-        BUCKET_BUCKET: ${taito_random_name}-${taito_env}
-        BUCKET_BROWSE_URL: https://console.cloud.google.com/storage/browser/${taito_random_name}-${taito_env}
-        BUCKET_DOWNLOAD_URL: https://storage.cloud.google.com/${taito_random_name}-${taito_env}
+        BUCKET_BUCKET: ${st_bucket_name}
+        BUCKET_BROWSE_URL: https://console.cloud.google.com/storage/browser/${st_bucket_name}
+        BUCKET_DOWNLOAD_URL: https://storage.cloud.google.com/${st_bucket_name}
         BUCKET_FORCE_PATH_STYLE: 'true'
 
     storage:
