--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -85,6 +85,14 @@ steps:
     - taito_mode=ci
     - taito_ci_phases=${_TAITO_CI_PHASES}
 
+- id: artifact-prepare-worker
+  waitFor: ['build-prepare']
+  name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
+  args: ['artifact-prepare:worker:$BRANCH_NAME', '$COMMIT_SHA']
+  env:
+    - taito_mode=ci
+    - taito_ci_phases=${_TAITO_CI_PHASES}
+
 - id: artifact-prepare-www
   waitFor: ['build-prepare']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
@@ -164,6 +172,14 @@ steps:
   waitFor: ['deployment-verify']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
   args: ['artifact-release:server:$BRANCH_NAME', '$COMMIT_SHA']
+  env:
+    - taito_mode=ci
+    - taito_ci_phases=${_TAITO_CI_PHASES}
+
+- id: artifact-release-worker
+  waitFor: ['deployment-verify']
+  name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
+  args: ['artifact-release:worker:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - taito_ci_phases=${_TAITO_CI_PHASES}
