--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -181,9 +181,11 @@ full-stack:
       serviceAccount: # For GCP
         secret: ${taito_project}-${taito_env}-storage-serviceaccount.key # For GCP
       secretEnv: # For Azure
-        MINIO_ACCESS_KEY: ${taito_project}-${taito_env}-storage.accessKey1 # For Azure
-        MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage.accessKey2 # For Azure
+        MINIO_ACCESS_KEY: ${taito_project}-${taito_env}-storage.accessKeyId # For Azure
+        MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage.secretKey # For Azure
+        AZURE_STORAGE_KEY: ${taito_project}-${taito_env}-storage.accessKey1 # For Azure
       env:
+        AZURE_STORAGE_ACCOUNT: acmeazureware${taito_env} # For Azure
         MINIO_CONFIG_DIR: /tmp
 
     worker:
