fix(helm): correct network policies

--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -21,7 +21,7 @@ full-stack:
 
   ingress:
     class: nginx
-    namespace: nginx-ingress
+    namespace: ingress-nginx
     domains:
       - name: ${taito_domain}
         altDomains:
