--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,65 @@
 {
   "name": "full-stack-template-worker",
-  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "lint": "echo 'TODO: lint code'",
-    "unit": "echo 'TODO: run unit tests'",
-    "start": "echo 'TODO: start' && tail -f /dev/null"
+    "preinstall": "if [ -f package-lock.json ]; then npx npm-force-resolutions; fi",
+    "unit": "jest src/ --passWithNoTests -t",
+    "test": "jest test/ --passWithNoTests -t",
+    "start": "npm run start:dev",
+    "start:dev": "NODE_ENV=development ts-node-dev --respawn $( ( [ $HOST_OS = 'macos' ] || [ $HOST_OS = 'windows' ] ) && echo --poll) --inspect=0.0.0.0:9229 -- index.ts | bunyan -l debug",
+    "lint": "tsc -p . --noEmit && eslint ./src/**/*.ts --ignore-path .eslintignore --quiet",
+    "build:test": "tsc --build tsconfig.test.json",
+    "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
+    "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@sentry/node": "^5.29.0",
+    "aws-sdk": "^2.807.0",
+    "axios": "^0.21.0",
+    "bunyan": "^1.8.14",
+    "koa": "^2.13.0",
+    "koa-joi-router": "^7.0.0",
+    "koa-qs": "^3.0.0",
+    "lodash": "^4.17.15",
+    "mustache": "^4.1.0",
+    "pg-promise": "^10.8.1",
+    "serverless-http": "^2.5.0",
+    "showdown": "^1.9.1",
+    "stack-trace": "0.0.10",
+    "uuid": "^8.3.2"
+  },
+  "resolutions": {
+    "qs": "~6.3.2"
+  },
+  "devDependencies": {
+    "@types/bunyan": "1.8.6",
+    "@types/jest": "^26.0.18",
+    "@types/joi": "^14.3.4",
+    "@types/koa": "^2.11.3",
+    "@types/koa-joi-router": "^5.2.3",
+    "@types/koa-qs": "2.0.0",
+    "@types/koa-router": "^7.4.1",
+    "@types/lodash": "^4.14.157",
+    "@types/mustache": "^4.1.0",
+    "@types/node": "^14.14.11",
+    "@types/pg": "^7.14.7",
+    "@types/showdown": "1.9.3",
+    "@types/stack-trace": "0.0.29",
+    "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-promise": "4.2.1",
+    "jest": "^26.1.0",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.1.1",
+    "ts-node-dev": "^1.1.0",
+    "typescript": "^4.1.2"
+  }
 }
