--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "test": "echo TODO run tests but not cypress",
     "cypress:run": "cypress run -s test/integration/**/${test_name}.spec.js",
     "cypress:open": "cypress open",
-    "start": "NODE_ENV=development webpack serve --env development",
-    "build": "NODE_ENV=production webpack --env production",
+    "start": "NODE_ENV=development webpack serve --mode development",
+    "build": "NODE_ENV=production webpack --mode production --progress",
     "analyze": "ANALYZE_BUNDLE=true npm run build",
     "lang:add-locale": "lingui add-locale",
     "lang:extract": "lingui extract",
@@ -22,9 +22,10 @@
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
     "@sentry/browser": "5.29.0",
-    "axios": "0.21.0",
+    "axios": "^0.21.1",
     "connected-react-router": "6.8.0",
     "core-js": "3.8.1",
+    "file-loader": "^6.2.0",
     "history": "4.10.1",
     "query-string": "6.13.1",
     "react": "17.0.1",
@@ -36,7 +37,7 @@
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
     "redux-saga": "1.1.3",
-    "styled-components": "5.1.0",
+    "styled-components": "^5.2.3",
     "workbox-window": "6.0.2"
   },
   "devDependencies": {
@@ -76,8 +77,8 @@
     "babel-plugin-styled-components": "1.12.0",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "clean-webpack-plugin": "3.0.0",
-    "css-loader": "5.0.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
     "cypress": "6.1.0",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
@@ -88,22 +89,21 @@
     "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.3",
-    "favicons-webpack-plugin": "5.0.0-alpha.3",
-    "fork-ts-checker-webpack-plugin": "6.0.8",
-    "html-webpack-plugin": "5.0.0-beta.1",
+    "fork-ts-checker-webpack-plugin": "^6.2.5",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "26.1.0",
-    "mini-css-extract-plugin": "1.3.3",
+    "mini-css-extract-plugin": "^1.6.0",
     "pg-promise": "10.8.1",
     "prettier": "2.2.1",
-    "react-refresh": "0.9.0",
-    "source-map-loader": "1.1.3",
-    "style-loader": "2.0.0",
+    "react-refresh": "^0.10.0",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
     "typescript": "4.1.3",
-    "webpack": "5.11.1",
-    "webpack-bundle-analyzer": "4.3.0",
-    "webpack-cli": "4.3.0",
-    "webpack-dev-server": "4.0.0-beta.0",
-    "webpack-pwa-manifest": "4.3.0",
-    "workbox-webpack-plugin": "6.0.2"
+    "webpack": "^5.36.2",
+    "webpack-bundle-analyzer": "^4.4.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.1.5"
   }
 }
