chore: update lingui

--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,6 @@
     "axios": "0.21.1",
     "connected-react-router": "6.8.0",
     "core-js": "3.8.1",
-    "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "6.2.0",
     "history": "4.10.1",
     "query-string": "6.13.1",
@@ -50,16 +49,16 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.7",
-    "@lingui/cli": "3.3.0",
-    "@lingui/loader": "3.3.0",
-    "@lingui/macro": "3.3.0",
+    "@lingui/cli": "3.8.10",
+    "@lingui/loader": "3.8.10",
+    "@lingui/macro": "3.8.10",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@testing-library/jest-dom": "5.11.0",
     "@testing-library/react": "11.2.2",
     "@types/jest": "26.0.18",
     "@types/lingui__core": "2.7.1",
     "@types/lingui__macro": "2.7.4",
-    "@types/lingui__react": "2.8.2",
+    "@types/lingui__react": "2.8.3",
     "@types/node": "14.14.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
@@ -90,6 +89,7 @@
     "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.3",
+    "favicons-webpack-plugin": "5.0.2",
     "fork-ts-checker-webpack-plugin": "6.2.5",
     "html-webpack-plugin": "5.3.1",
     "jest": "26.1.0",
